--- a/web/style.css
+++ b/web/style.css
@@ -1,3 +1,12 @@
 table, tr, th, td {
     border: 1px solid black;
 }
+
+td, th {
+    padding: 10px;
+}
+
+th:hover {
+    background-color: green;
+    text-decoration: underline;
+}
