--- a/web/style.css
+++ b/web/style.css
@@ -7,6 +7,7 @@ td, th {
 }
 
 th:hover {
-    background-color: green;
+    background-color: rgb(0, 255, 0);
     text-decoration: underline;
+    cursor: default;
 }
